<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="election"
            type="com.example.android.politicalpreparedness.domain.models.Election" />

        <variable
            name="voteInfoViewModel"
            type="com.example.android.politicalpreparedness.presentation.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:background="@color/colorPrimaryDark"
            app:titleTextColor="@color/white"
            app:title="@{election.name}"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            android:text="@{election.electionDay.toString()}"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/election_information"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_locations"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_ballot"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correspondence_header"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- button to save election to Room -->
        <Button
            android:id="@+id/btn_follow_election"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/ButtonStyle"
            android:text="@string/follow_election"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>