<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.presentation.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin">

        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile"
            profileImage="@{representative.official.photoUrl}"
            android:contentDescription="@string/representative_photo"/>

        <TextView
            android:id="@+id/tv_representative_office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            style="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{representative.office.name}"
            tools:text="Vice President of the United States"/>

        <TextView
            android:id="@+id/tv_representative_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_representative_office"
            android:text="@{representative.official.name}"
            tools:text="Kamala D. Harris"/>

        <TextView
            android:id="@+id/tv_representative_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_representative_name"
            android:text="@{representative.official.party}"
            tools:text="Democratic Party"/>

        <ImageView
            android:id="@+id/iv_www_link"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/link_margin"
            app:layout_constraintEnd_toStartOf="@id/iv_facebook_link"
            app:layout_constraintTop_toBottomOf="@id/tv_representative_office"
            app:srcCompat="@drawable/ic_www"
            android:contentDescription="@string/browse_link"/>

        <ImageView
            android:id="@+id/iv_facebook_link"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/link_margin"
            app:layout_constraintEnd_toStartOf="@id/iv_twitter_link"
            app:layout_constraintTop_toBottomOf="@id/tv_representative_office"
            app:srcCompat="@drawable/ic_facebook"
            android:contentDescription="@string/facebook_link"/>

        <ImageView
            android:id="@+id/iv_twitter_link"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/link_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_representative_office"
            app:srcCompat="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_link"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>